no commit message

--- a/UX/Text/i18n/Encoding/Unicode/Data/unicode-data.node.txt
+++ b/UX/Text/i18n/Encoding/Unicode/Data/unicode-data.node.txt
@@ -11,6 +11,7 @@ VERSION ==>                       #0.1.0
 
 require('@unicode/unicode-X.Y.Z') #UNICODE
                                   #UCD and emoji data.
+                                  #Latest X.Y.Z: 13.0.0
 
 CNUM                              #Codepoint NUM
 CCHAR                             #Codepoint 'CHAR'
@@ -19,6 +20,8 @@ require('.../FILE')               #List of codepoints, with info spread across s
                                   #  - code-points.js CNUM_ARR
                                   #  - symbols.js CCHAR_ARR
                                   #  - regex.js REGEXP
+                                  #.../FILE is '@unicode/unicode-X.Y.Z/Names/NAME', e.g. '@unicode/unicode-X.Y.Z/Scripts/SCRIPT/FILE'
+                                  #Applies to most UNICODE.* unless specified
 
 UNICODE.Names                     #STR_ARR (empty)
 require('@unicode/unicode-X.Y.Z/  #CODEPOINT_MAP of codepoint names, uppercased, e.g. 'EXCLAMATION MARK'
@@ -29,6 +32,13 @@ require('@unicode/unicode-X.Y.Z/  #CODEPOINT_MAP of codepoint names, uppercased,
                                   #  - 'CJK Ideograph[ Extension A-G|K]' (3400-4dbf, 4e00-9ffc, 3400-9999, 20000-2ebe0, 30000-3134a),
                                   #    'Hangul Syllable' (ac00-d7a3), Tangut Ideograph (17000-187f7)
 
-UNICODE.Blocks                    #All Unicode 'BLOCK'_ARR, i.e. grouping close codepoints together.
-require('@unicode/unicode-X.Y.Z/
- Blocks/BLOCK/FILE')              #
+UNICODE.Block                     #STR_ARR, i.e. grouping close codepoints together.
+                                  #Examples: 'Box_Drawing', 'Basic_Latin'
+UNICODE.Script                    #STR_ARR, i.e. grouping close codepoints together.
+                                  #Examples: 'Arabic', 'Basic_Latin'
+UNICODE.General_Category          #STR_ARR, i.e. general attributes.
+                                  #Examples: 'Letter', 'Punctuation', 'Number'
+UNICODE.Binary_Property           #STR_ARR, i.e. specific attributes.
+                                  #Examples: 'Cased', 'Dash', 'Alphabetic'
+UNICODE.Sequence_Property         #STR_ARR, i.e. emoji data.
+                                  #Example: 'RGI_Emoji' (main way to detect whether emoji)
