no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1516,6 +1516,7 @@ class-methods-use-this [OBJ]      #CLASS methods must use "this"
                                   #  - exceptMethods "FUNC"_ARR
 consistent-this [STR]             #Variables assigned with "this" must be named 'VAR' (def: 'that')
 unicorn/no-this-assignment        #Do not assign `this` to a variable
+unicorn/no-static-only-class      #No CLASS with only static methods
 
 no-class-assign                   #Avoid reassigning variables created by ClassDeclaration
 
@@ -1567,6 +1568,7 @@ array-callback-return [OBJ]       #[TYPED_]ARR.from|every|some|filter|find[Index
                                   #  - checkForEach BOOL: if true (def: false), forbid "return" in [TYPED_]ARR.forEach
 unicorn/prefer-includes          ##Prefer ARR|STR.includes() over ARR|STR.indexOf|some()
 unicorn/prefer-array-flat-map    ##Prefer ARR.flatMap() over ARR.map().flat()
+unicorn/prefer-array-flat        ##Prefer ARR.flat() over [].concat()
 unicorn/no-array-reduce          ##Prefer ARR.map|filter() over ARR.reduce()
 unicorn/prefer-negative-index    ##Prefer ARR|STR|TYPED_ARR.slice|splice(-NUM, ...) instead of slice|splice(ARR|STR|TYPED_ARR.length - NUM, ...)
 unicorn/prefer-array-find        ##Prefer ARR.find() over ARR.filter()[0]
@@ -1599,7 +1601,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (28.0.2)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (29.0.0)
 
 unicorn/
  prefer-string-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
