no commit message

--- a/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
+++ b/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
@@ -5,7 +5,7 @@
 
 
 
-VERSION ==>                       #7.12.16
+VERSION ==>                       #7.13.14
 
 GOAL ==>                          #JavaScript source code transformation
 
@@ -56,7 +56,6 @@ ALTERNATIVES ==>                  #Must choose either:
                                   #     - version VERSION (false (def) or 3):
                                   #        - uses @babel/runtime-corejs3 instead of @babel/runtime
                                   #     - proposals BOOL: if false (def), does not include stage-* proposals
-                                  #  - useESModules BOOL (def: false): produce ES modules in output
 
 @babel/preset-env                 #For @babel/runtime:
                                   #  - add transform plugins
@@ -93,7 +92,7 @@ ALTERNATIVES ==>                  #Must choose either:
                                              \=+===============================+=/
 
 
-VERSION ==>                       #3.8.3
+VERSION ==>                       #3.10.0
 
 require('core-js')                #Polyfills all
                                   #Prints some annoying messages on postinstall unless ENVVAR ADBLOCK set
@@ -171,7 +170,7 @@ CONF.exclude                      #Inverse
 CONF.only|ignore                  #Like CONF.include|exclude except applies to all sub-CONFs not only current one
 .babelignore                      #Like CONF.only|ignore. Same syntax as .gitignore
 --no-copy-ignored                 #Do not copy ignored files
--x|--extensions                   #'.EXT',... (def: '.es6|js|es|jsx|mjs').  Only input files with those.
+-x|--extensions                   #'.EXT',... (def: '.es6|js|es|jsx|cjs|mjs').  Only input files with those.
 --keep-file-extensions            #
 --out-file-extension              #'EXT' of the output files
 
@@ -306,7 +305,7 @@ BABEL-CORE.transform
                                              \=+===============================+=/
 
 
-require("babel/register")[(CONF)] #Patch require() so it uses Babel on *.es6|es|jsx|js|mjs
+require("babel/register")[(CONF)] #Patch require() so it uses Babel on *.es6|es|jsx|js|cjs|mjs
                                   #Should not be used in library, as it will patch require() for other libraries too.
                                   #CONF.ignore defaults to 'node_modules/**'
                                   #For dev purpose only
@@ -421,7 +420,7 @@ modules-commonjs                  #PLUGIN_OPTS:
                                   #  - noInterop BOOL (def: false):
                                   #     - do not check IMPORT.__esModule
                                   #     - i.e. always import packages as if they were CommonJS
-                                  #  - loose BOOL (def: false): do not make EXPORT.__esModule non-configurable|writable
+                                  #  - assumptions.enumerableModuleMeta BOOL (def: false): do not make EXPORT.__esModule non-configurable|writable
 modules-amd                       #Same PLUGIN_OPTS  as module-commonjs
 modules-umd                       #PLUGIN_OPTS:
                                   #  - globals.MODULE|PATH 'VAR': global variable names (def: camelCase of basename(MODULE|PATH))
@@ -452,16 +451,18 @@ PRESET                            #Same syntax as PLUGIN, except 'plugin' is 'pr
 @babel/preset-env                 #Preset adding plugins, ponyfills and polyfills based on browserslist, caniuse-db and kangax/compat-table
                                   #See above for which ones are included, and how.
                                   #PLUGIN_OPT:
-                                  #  - targets ALL_BROWSERS (see browserslist doc)
-                                  #     - def: ES<=2017
-                                  #  - browserlistEnv: browesrlist's OPTS.env
                                   #  - configPath 'DIR': browserslist's CONF.path
                                   #  - ignoreBrowsersListConfig BOOL (def: false): ignore BROWSERFILE
                                   #  - forceAllTransforms BOOL (def: false): force using all transforms, regardless of "targets"
                                   #  - include|exclude PLUGIN_STR|REGEXP_ARR
                                   #  - modules 'amd|umd|systemjs|commonjs|cjs|auto'|false (def: 'auto'): use @babel/plugin-transform-*
-                                  #  - spec|loose BOOL (def: false): always use PLUGIN_OPT.spec|loose
+                                  #  - spec BOOL (def: false): always use PLUGIN_OPT.spec
+                                  #  - assumptions OBJ (def: {}): always use PLUGIN_OPT.assumptions OBJ
                                   #  - debug true: prints which plugins will be used
+CONF.targets                      #ALL_BROWSERS (see browserslist doc)
+                                  #Def: ES<=2017
+CONF.browserlistEnv               #browserlist's OPTS.env
+CONF.browserslistConfigFile       #browserlist's OPTS.path
 
 
                                              /=+===============================+=\
@@ -491,7 +492,7 @@ PLUGIN                            #Either:
 PLUGIN_OPT.spec                   #BOOL (def: false)
                                   #Use slower but more spec-compliant transformations
                                   #Common to many PLUGINs.
-PLUGIN_OPT.loose                  #BOOL (def: false)
+PLUGIN_OPT.assumptions.VAR        #BOOL (def: false)
                                   #Use faster but less spec-compliant transformations
                                   #Common to many PLUGINs.
 
