no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -2063,6 +2063,11 @@ import.meta.url                          12*-|||#Current file absolute path, as 
                                              *-|#  - to avoid long loading time, should preload each file with
                                              *-|#    <link rel="modulepreload" href="FILE">
 
+module { ... }                               *-|#Declare a module inline.
+                                             *-|#Return its 'MDL' which must be passed to import()
+                                             *-|#Behave like declaring module in a separate file in terms of scope
+                                             *-|#   - except import.meta.url is same
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
