--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -254,8 +254,9 @@ new FUNC(...)                     #Child of EXPR, type 'NewExpression':
 
 ?                            (bl)*#Type 'ArgumentPlaceholder'
 
-do { ... }                     (b)#Child of EXPR, type 'DoExpression':
+[async] do { ... }             (b)#Child of EXPR, type 'DoExpression':
                                (b)#  - body BLOCK_STATEMENT
+                               (b)#  - async BOOL
 
 
 
@@ -573,3 +574,6 @@ import("MDL")                 stbl#Child of EXPR, type 'ImportExpression':
                               stbl#  - source EXPR
 import("MDL", OPTS)           (b)*#  - [attributes EXPRESSION]
                             (tbl)##Treated as a CALL_EXPRESSION
+
+module { ... }                   *#Child of EXPR, type 'ModuleExpression':
+                                  #  - body PROGRAM
