no commit message

--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
@@ -39,7 +39,7 @@ ALTERNATIVES ==>                  #  - esprima:
                                   #  - cherow: not maintained
                                   #  - esprit: not maintained
 
-VERSION ==>                       #8.0.5
+VERSION ==>                       #8.1.0
                                   #Browser, Node.js or CLI
                                   #JavaScript parser and tokenizer
 
@@ -170,6 +170,7 @@ acorn [FILE]                      #CLI. Calls ACORN.parse() -> console.log()
 --ecma3|5|6|7|8
 --module
 --allow-hash-bang
+--allow-await-outside-function
 --locations                       #ACORN.parse|tokenize() OPTS
 
 
