no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #7.22.0
+VERSION ==>                       #7.23.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -2186,7 +2186,9 @@ no-void [OBJ]                     #Avoid void VAL
                                   #  - allowAsStatement BOOL (def: false): allow as statement but not as EXPR
 no-with                           #Avoid "with"
 no-caller                         #Avoid arguments.caller|callee
-no-sequences                      #Avoid comma operator, except in for(...) or if EXPR wrapped in parenthesis
+no-sequences [OBJ]                #Avoid comma operator, except in for(...) or if EXPR wrapped in parenthesis
+                                  #OBJ:
+                                  #  - allowInParentheses BOOL (def: true)
 no-continue                       #Avoid continue statements
 no-iterator                       #Avoid __iterator__ (non-standard)
 no-console [OBJ]                  #Avoid console
