no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -307,7 +307,7 @@ EVENTEMITTER.off|removeListener('EVENT', FUNC)
 EVENTEMITTER.removeAllListeners(['EVENT'])
   ->EVENTEMITTER                                #
 EVENTEMITTER.emit('EVENT'[, ...])->BOOL         #True if there were listeners
-                                                #If 'EVENT' is 'error' and there are not listeners, throws instead
+                                                #If 'EVENT' is 'error' and there are no listeners, throws instead
 
 EVENTEMITTER.listeners(EVENT)->FUNC_ARR         #
 EVENTEMITTER.rawListeners(EVENT)->FUNC_ARR      #Same but also with what Node.js adds, e.g. once() wrapper
