no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #7.23.0
+VERSION ==>                       #7.24.0
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -1037,7 +1037,9 @@ no-plusplus [OBJ]                 #Avoid ++ --
 operator-assignment [STR]         #Whether to use += -= etc.
                                   #STR: 'always' (def) or 'never'
 
-no-multi-assign                   #Avoid VAR = VAR2 = VAL
+no-multi-assign [OBJ]             #Avoid VAR = VAR2 = VAL
+                                  #OBJ:
+                                  #  - ignoreNonDeclaration BOOL (def: false): if true, ignore if assign but does not initializes
 
 prefer-object-spread              #Avoid Object.assign(OBJ, ...) except if OBJ is a variable, or ...ARR spread is used
                                   #Prefer { ...OBJ }
@@ -1163,6 +1165,7 @@ no-implicit-coercion [OBJ]        #Must use Boolean|Number|String() for typecast
                                   #OBJ:
                                   #  - boolean|number|string BOOL (def: true)
                                   #  - allow STR_ARR (def: []): among '~', '!!', '+', '*'
+                                  #  - disallowTemplateShorthand BOOL (def: false): use String(VAL) instead of `${VAL}`
 unicorn/explicit-length-check    ##Avoid implicit transtyping of ARR|STR.length
  [OBJ]                           ##OBJ:
                                  ##  - non-zero: whether length !== 0 should be
@@ -1749,7 +1752,7 @@ no-async-promise-executor         #Avoid new Promise(async FUNC)
 require-atomic-updates            #Avoid GLOBAL_VAR = await FUNC(GLOBAL_VAR) as it creates a delay between GLOBAL_VAR
                                   #being read and written, i.e. introducing race conditions
 
-promise/*                        ##Module "eslint-plugin-promise" (4.3.1)
+promise/*                        ##Module "eslint-plugin-promise" (5.1.0)
 promise/catch-or-return [OBJ]    ##If PROMISE.then(FUNC), must call PROMISE.catch(FUNC2)
                                  ##OBJ:
                                  ##  - allowThen BOOL (def: false): allow PROMISE.then(FUNC, FUNC2) too
@@ -1769,8 +1772,8 @@ promise/no-promise-in-callback   ##Avoid PROMISE inside of callbacks
 promise/no-callback-in-promise   ##Avoid callbacks inside of PROMISE
  [OBJ]                           ##OBJ: exceptions "FUNC"_ARR
 promise/avoid-new                ##Avoid new Promise()
-promise/prefer-await-to-then     ##Avoid PROMISE.then(), prefer await PROMISE
-                                 ##await PROMISE.then() is allowed
+promise/prefer-await-to-then     ##Avoid PROMISE.then|catch|finally(), prefer await PROMISE
+                                 ##await PROMISE.then|catch|finally() is allowed
 promise/prefer-await-to-callbacks##Avoid callbacks, prefer await PROMISE
 
 no-sync [OBJ]                     #Avoid sync methods from Node.js core modules
