no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2212,9 +2212,9 @@ INT3, FUNC(ERROR, INT4, BUFFER))                #
 read(FD_INT[, OPTS],FUNC(ERROR,INT2,BUFFER)) 12*#Read INT2 bytes from file FD_INT and return as BUFFER
                                              12*#OPTS:
                                              12*#  - buffer TDBUFFER (def: Buffer.alloc(16384))
-                                             12*#  - offset INT (def: 0)
+                                             12*#  - offset INT (def: 0) (in BUFFER, to write)
                                              12*#  - length INT2 (def: OPTS.buffer.length)
-                                             12*#  - position INT3 (def: null)
+                                             12*#  - position INT3 (def: null) (in file, to read)
 readv(FD_INT, ARRAYBUFFERVIEW[, INT3]
  FUNC(ERROR, INT4, ARRAYBUFFERVIEW_ARR))     12*#Same but with ARRAYBUFFERVIEW_ARR
 f[data]sync(FD_INT, FUNC(ERROR))                #Flushes to disk
