no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2176,11 +2176,11 @@ FSDIR                                        12*#Is ASYNC_ITERATOR iterating ove
 open(PATH, STR|NUM[, MODE], FUNC(ERROR, FD_INT))#Open a file and return a file descriptor.
                                                 #STR are flags: "r|w|a[s|x][+]":
                                                 #  - r: O_RDONLY
-                                                #  - w: O_TRUNC + O_CREAT + O_WRONLY
-                                                #  - a: O_APPEND + O_CREAT + O_WRONLY
+                                                #  - w: O_WRONLY + O_CREAT + O_TRUNC
+                                                #  - a: O_WRONLY + O_CREAT + O_APPEND
                                                 #  - +: O_RDONLY|WRONLY -> O_RDWR
-                                                #  - x: O_EXCL. Not with 'r'
-                                                #  - s: O_SYNC. Not with 'w'. Can be done with 'a'
+                                                #  - x: O_EXCL. Only with 'w|a', not 'r'
+                                                #  - s: O_SYNC. Only with 'r|a', not 'w'
                                                 #NUM are or'd flags:
                                                 #  - O_RDONLY|O_WRONLY|O_RDWR: read|write-only or not
                                                 #  - O_TRUNC: truncate
