no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2218,7 +2218,7 @@ read(FD_INT[, OPTS],FUNC(ERROR,INT2,BUFFER)) 12*#Read INT2 bytes from file FD_IN
 readv(FD_INT, ARRAYBUFFERVIEW[, INT3]
  FUNC(ERROR, INT4, ARRAYBUFFERVIEW_ARR))     12*#Same but with ARRAYBUFFERVIEW_ARR
 f[data]sync(FD_INT, FUNC(ERROR))                #Flushes to disk
-                                                #If 'data', does not flush metadata (e.g. mtime)
+                                                #If 'data', like O_DSYNC instead of O_SYNC
 
 readFile                                        #Easier way than using open() and read()
 (PATH|FD_INT, [OPTS, ]FUNC(ERROR, BUFFER|STR))  #OPTS:
