no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1124,16 +1124,16 @@ unicorn/prevent-abbreviations    ##Prevent abbreviations/shortnames for variable
                                  ##        - { STR: true }: report and autofix
                                  ##        - { STR: false }: do not report
                                  ##  - extendDefaultReplacements BOOL (def: true): if false, replace list instead of extending it
-                                 ##  - whitelist { STR: true, ... }: allow STR (case-sensitive)
+                                 ##  - allowList { STR: true, ... }: allow STR (case-sensitive)
                                  ##  - ignore STR|REGEXP_ARR (def: [])
-                                 ##  - extendDefaultWhitelist BOOL (def: true)
+                                 ##  - extendDefaultAllowList BOOL (def: true)
                                  ##  - checkDefaultAndNamespaceImports 'internal' (def) or BOOL: check "import ... from" and "import * as ... from"
                                  ##  - checkShorthandImports 'internal' (def) or BOOL: check "import {VAR} from"
                                  ##  - checkShorthandProperties BOOL (def: false): check "const {VAR} = VAL"
                                  ##  - checkProperties BOOL (def: false): check OBJ.VAR
                                  ##  - checkVariables BOOL (def: true): check VAR
                                  ##  - checkFilenames BOOL (def: true)
-unicorn/no-keyword-prefix [OBJ]  ##Prevent variables names that start with OBJ.blacklist (def: ['new', 'class'])
+unicorn/no-keyword-prefix [OBJ]  ##Prevent variables names that start with OBJ.disallowedPrefixes (def: ['new', 'class'])
                                  ##OBJ:
                                  ##  - onlyCamelcase BOOL (def: true)
                                  ##  - checkProperties BOOL (def: true)
@@ -1264,6 +1264,14 @@ no-fallthrough [OBJ]              #Switch cases must use break
                                   #OBJ: commentPattern REGEXP (def: /^falls through$/i) for a comment
                                   #that can be used instead of break
 no-case-declarations              #Avoid let|const in switch case not wrapped in {}
+
+unicorn/prefer-switch [OBJ]      ##Prefer switch over "if (VAL === VAL2) {...} else if (VAL3 === VAL4) {...} ..."
+                                 ##OBJ:
+                                 ##  - minimumCases NUM (def: 3) (excluding "default")
+                                 ##  - emptyDefaultCase STR: to avoid conflict with "default-case" rule:
+                                 ##     - "no-default-comment" (def): add comment after last case
+                                 ##     - "do-nothing-comment": add "default" case + comment
+                                 ##     - "no-default-case": add neither "default" case nor comment
 
 
                                              /=+===============================+=\
@@ -1578,7 +1586,9 @@ unicorn/prefer-array-find        ##Prefer ARR.find() over ARR.filter()[0]
 unicorn/prefer-array-some        ##Prefer ARR.some() over ARR.find()
 unicorn/prefer-array-index-of    ##Prefer ARR.indexOf() over ARR.findIndex() when possible
 unicorn/no-array-for-each        ##Prefer for loop over ARR.forEach()
-unicorn/no-array-push-push       ##Combine multiple ARR.push() calls into one
+unicorn/no-array-push-push [OBJ] ##Combine multiple ARR.push() calls into one
+                                 ##OBJ:
+                                 ##  - ignore 'VARR'_ARR (def: ['stream', 'this', 'this.stream'])
 
 no-array-constructor              #Avoids [new] Array(VAL,...)
                                   #[new] Array(NUM) is still allowed
@@ -1604,7 +1614,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (29.0.0)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (31.0.0)
 
 unicorn/
  prefer-string-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
@@ -1995,6 +2005,7 @@ import/no-commonjs [OBJ]         ##Avoid require() or module.exports
                                  ##  - allowRequire BOOL (def: false): allow require()
                                  ##  - allowConditionalRequire BOOL (def: true): allow require() inside if
                                  ##  - allowPrimitiveModules BOOL (def: false): allow module.exports = non-OBJ|FUNC
+unicorn/prefer-module            ##Avoid require(), module.exports, 'use strict', __dirname|__filename
 import/no-amd                    ##Avoid AMD defined|require()
 
 import/no-webpack-loader-syntax  ##Avoid import|require using Webpack loader syntax, i.e. 'LOADER!...'
@@ -2008,6 +2019,10 @@ import/no-restricted-paths [OBJ] ##Blacklists import|require of any file inside 
 unicorn/import-index [OBJ]       ##Avoid import|require of index.js with './index.js' or 'DIR/'. Prefer 'DIR'
                                  ##OBJ:
                                  ##  - ignoreImports BOOL (def: false): require() only, not import
+
+unicorn/prefer-node-protocol     ##Prefer 'node:MDL' over 'MLD' for core modules
+ [OBJ]                           ##OBJ:
+                                 ##  - checkRequire BOOL: if true (def: false), ignore CommonJS, only check ES modules
 
 
                                              /=+===============================+=\
