no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1096,9 +1096,11 @@ cursorTo(OSTREAM, NUM, NUM2[,FUNC()])->BOOL     #Move cursor absolutely (\e[NUMa
 moveCursor(OSTREAM, NUM[, NUM2][,FUNC()])->BOOL #Move cursor relatively (\e[NUM2c, \e[NUM2d)
 clearScreenDown(OSTREAM[, FUNC()])->BOOL        #Clear all following lines (\e0j). To clear screen, combine with cursorTo(OSTREAM, 0, 0)
 
-emitKeypressEvents(OSTREAM[, INTERFACE])        #Enable OSTREAM.on('keypress')
-                                                #If OSTREAM (e.g. process.stdin) is connected to an INTERFACE, can specify it to disable completion on copy-pasted input
-OSTREAM.on('keypress', FUNC(STR, OBJ))          #STR is what to print (e.g. 'a', undefined or '') (for a, LeftArrow and CTRL-C)
+emitKeypressEvents(ISTREAM[, INTERFACE])        #Enable ISTREAM.on('keypress')
+                                                #If ISTREAM (e.g. process.stdin) is connected to an INTERFACE, can specify it to disable completion on copy-pasted input
+                                                #ISTREAM must be in raw mode
+                                                #Cannot be undone.
+ISTREAM.on('keypress', FUNC(STR, OBJ))          #STR is what to print (e.g. 'a', undefined or '') (for a, LeftArrow and CTRL-C)
                                                 #OBJ:
                                                 #  - sequence STR (e.g. 'a', '\u001b[d' or '\u0003')
                                                 #  - name STR (e.g. 'a', 'left' or 'c')
