no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1097,9 +1097,8 @@ moveCursor(OSTREAM, NUM[, NUM2][,FUNC()])->BOOL #Move cursor relatively (\e[NUM2
 clearScreenDown(OSTREAM[, FUNC()])->BOOL        #Clear all following lines (\e0j). To clear screen, combine with cursorTo(OSTREAM, 0, 0)
 
 emitKeypressEvents(ISTREAM[, INTERFACE])        #Enable ISTREAM.on('keypress')
-                                                #If ISTREAM (e.g. process.stdin) is connected to an INTERFACE, can specify it to disable completion on copy-pasted input
-                                                #ISTREAM must be in raw mode
-                                                #Cannot be undone.
+                                                #If ISTREAM (e.g. process.stdin) is connected to an INTERFACE, should specify it to disable completion on copy-pasted input
+                                                #ISTREAM must be in raw mode.
 ISTREAM.on('keypress', FUNC(STR, OBJ))          #STR is what to print (e.g. 'a', undefined or '') (for a, LeftArrow and CTRL-C)
                                                 #OBJ:
                                                 #  - sequence STR (e.g. 'a', '\u001b[d' or '\u0003')
@@ -1108,6 +1107,9 @@ ISTREAM.on('keypress', FUNC(STR, OBJ))          #STR is what to print (e.g. 'a',
                                                 #Can use ESC sequences
                                                 #As opposed to 'data', it is for each character, not for bulk:
                                                 #  - e.g. when copy-pasting, 'data' will be emitted once but 'keypress' once per character
+                                                #Under the hood, it actually adds a 'data' event handler:
+                                                #  - i.e. it puts ISTREAM in flowing mode
+                                                #  - i.e. to undo must do ISTREAM.off('keypress') then ISTREAM.pause()
 
 
                                              /=+===============================+=\
