no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1101,8 +1101,9 @@ emitKeypressEvents(ISTREAM[, INTERFACE])        #Enable ISTREAM.on('keypress')
                                                 #ISTREAM must be in raw mode.
 ISTREAM.on('keypress', FUNC(STR, OBJ))          #STR is what to print (e.g. 'a', undefined or '') (for a, LeftArrow and CTRL-C)
                                                 #OBJ:
-                                                #  - sequence STR (e.g. 'a', '\u001b[d' or '\u0003')
-                                                #  - name STR (e.g. 'a', 'left' or 'c')
+                                                #  - name STR (e.g. 'a' or 'pageup')
+                                                #  - sequence STR (e.g. 'a' or '\x1B[5~')
+                                                #  - code STR (e.g. 'a' or '[5~')
                                                 #  - shift|ctrl|meta BOOL
                                                 #Can use ESC sequences
                                                 #As opposed to 'data', it is for each character, not for bulk:
