no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -990,7 +990,9 @@ WriteStream                                     #Same as READSTREAM but for OSTR
 WRITESTREAM.columns|rows                        #UINT. Automatically updated.
                                                 #Under the hood, uses OS-specific syscalls (ioctl on Unix, GetConsoleScreenBufferInfo() on Windows)
 WRITESTREAM.getWindowSize()->[COL_NUM, ROW_NUM] #Returns WRITESTREAM.columns|rows
-WRITESTREAM.on("resize", FUNC())                #
+WRITESTREAM.on("resize", FUNC())                #Called when process.on('SIGWINCH'). Only differences:
+                                                #  - it is on WRITESTREAM, i.e. only set if STREAM.isTTY
+                                                #  - it is not emitted when terminal size did not change, e.g. signal was emitted programmatically
 
 WRITESTREAM.getColorDepth([process.env])->NUM   #Number of bits per channel: 1|4|8|24
                                                 #Used by console.*() and REPL
