no commit message

--- a/Languages/Language_processing/Beautifiers/Multi_language/prettier.node_cli.txt
+++ b/Languages/Language_processing/Beautifiers/Multi_language/prettier.node_cli.txt
@@ -19,7 +19,7 @@ ALTERNATIVES ==>                  #For:
                                   #     - esformatter (and jsfmt): not maintained
                                   #     - es-beautifier: not maintained
 
-VERSION ==>                       #2.2.1
+VERSION ==>                       #2.3.0
 
 OPINIONATED ==>                   #By design prettier does not allow configuration.
                                   #There are only few configuration options available for JavaScript
@@ -99,6 +99,7 @@ CONF.overrides                    #Sub-CONF for specific files, with OBJ_ARR:
 
 prettier [FILE|DIR|'GLOB'...]     #Prints to stdout
                                   #Def: stdin
+--no-error-on-unmatched-pattern   #No error when no input files
 --stdin-filepath FILE             #
 --write|w                         #Edit in-place
 
@@ -160,6 +161,7 @@ PRETTIER.getFileInfo[.sync]
                                   #  - 'vue'
                                   #  - 'angular'
                                   #  - 'lwc' (Salesforce "Lightning Web Components")
+                                  #  - 'glimmer' (Handlebars)
 --ignore-unknown|u                #Do not error if no parser can be found
 
 --plugin NAME|FILE                #A plugin is responsible for beautifying some specific syntax, by parsing then
@@ -338,6 +340,16 @@ STYLELINT-CONFIG-PRETTIER ==>    ##Stylelint config that:
 
                                              /=+===============================+=\
                                             /  :                               :  \
+                                            )==:          HANDLEBARS           :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+GENERAL ==>                       #Parser is glimmer
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
                                             )==:             GULP              :==(
                                             \  :_______________________________:  /
                                              \=+===============================+=/
@@ -345,3 +357,4 @@ STYLELINT-CONFIG-PRETTIER ==>    ##Stylelint config that:
 
 GULP-PRETTIER[.check]([CONF])    ##Version 3.0.0
                                  ##Adds VINYL.isPrettier true if modified
+
