no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -21,7 +21,7 @@ Todo:
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #15.11.0 (current), 14.15.0 (active LTS), 12.19.0 (active LTS), 10.23.0 (maintenance)
+VERSION ==>                                     #15.13.0 (current), 14.15.0 (active LTS), 12.19.0 (active LTS), 10.23.0 (maintenance)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -976,6 +976,7 @@ pipeline(SRC[, TRANSFORM...], DEST,             #Like SRC.pipe(TRANSFORM)....pip
                                                 #Can use streams
                                              13*#or sync|async iterables:
                                                 #  - SRC: ISTREAM or [ASYNC_]ITERABLE|ITERATOR
+                                        15.13.0*#    or BUFFER
                                                 #  - TRANSFORM: IOSTREAM or FUNC(ASYNC_ITERABLE)->ASYNC_ITERABLE
                                                 #  - DEST: OSTREAM or FUNC(ASYNC_ITERABLE)->PROMISE_SVAL
                                                 #Can use ARR of arguments [SRC, TRANSFORM..., DEST] instead of variadic arguments
@@ -1744,6 +1745,7 @@ RES.statusCode|Message                          #If statusMessage not set, use S
 RES.setHeader('VAR', 'VAL'[_ARR])               #'VAL'_ARR: same as doing setHeader() several times.
 RES.getHeader('VAR')->'VAL'[_ARR]               #
 RES.getHeaderNames()->'VAR'_ARR                 #
+RES.getRawHeaderNames()->'VAR'_ARR      15.13.0*#Same but without lowercasing
 RES.getHeaders()->OBJ                           #
 RES.hasHeader('VAR')->BOOL                      #
 RES.removeHeader('VAR')                         #
@@ -2745,6 +2747,8 @@ spawn(STR[, STR2_ARR][, OPTS])->CHILDPROCESS    #Creates and runs a CHILDPROCESS
                                                 #        - do not create new terminal window
                                                 #        - but cannot use CTRL-C
                                          15.5.0*#  - signal ABORT_SIGNAL
+                                                #  - timeout NUM (def: 0) (in ms)
+                                       <15.13.0*#    Only in execFile()
                                                 #Use CHILDPROCESS.ref(), so needs to use unref() if program can exit while CHILDPROCESS is running.
 fork(STR[, STR2_ARR][, OPTS])->CHILD_PROCESS    #Same as spawn() but using 'node STR ...STR2_ARR'
                                                 #OPTS:
@@ -2761,7 +2765,6 @@ execFile(STR[, STR2_ARR][, OPTS],               #Same as spawn() but using FUNC(
                                                 #Cannot use OPTS: stdio, argv0, detached
                                                 #Extra OPTS:
                                                 #  - encoding 'ENCODING' (def: 'utf-8')
-                                                #  - timeout NUM (def: 0) (in ms)
                                                 #  - maxBuffer NUM (def: 200KB): stdout|stderr max size
                                                 #  - killSignal 'SIGNAL'|SIGNUM (def: 'SIGTERM'): sent (with CHILD_PROCESS.kill()) on timeout|maxBuffer
 exec(STR[, OPTS], FUNC(ERROR, SVAL, SVAL2))
